<resources>
    <string name="app_name">NYTArticleSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="article_label">News Article Search</string>
    <string name="settings_lable">Settings</string>
    <string name="sortorder_prompt">Choose...</string>
    <string name="settings_title">Settings</string>
    <string name="btnSave">Save</string>
    <string name="tvBeginDate">Begin Date</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvNewsDeskValue">News Desk Value</string>
    <string name="cbArt">Art</string>
    <string name="cbFashionStyle"><![CDATA[Fashion & Style]]></string>
    <string name="cbSports">Sports</string>
    <string name="etBeginDate" />
    <string name="tvEndDate">End Date</string>
    <string name="etEndDate">End Date</string>

</resources>
