<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nytarticlesearch.activities.SettingsActivity"
    android:background="@color/primary_light">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sort Order"
        android:id="@+id/tvSortOrder"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tvNewsDeskValue"
        android:layout_alignEnd="@+id/tvNewsDeskValue"
        android:layout_gravity="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSortOrder"
        android:spinnerMode="dropdown"
        android:entries="@array/sortorder_array"
        android:prompt="@string/sortorder_prompt"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSortOrder"
        android:layout_toEndOf="@+id/tvSortOrder"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/etEndDate"
        android:layout_alignRight="@+id/cbSports"
        android:layout_alignEnd="@+id/cbSports"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvNewsDeskValue"
        android:id="@+id/tvNewsDeskValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spSortOrder"
        android:layout_gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbArt"
        android:id="@+id/cbArt"
        android:checked="false"
        android:layout_below="@+id/spSortOrder"
        android:layout_toRightOf="@+id/tvNewsDeskValue"
        android:layout_toEndOf="@+id/tvNewsDeskValue"
        android:layout_gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbFashionStyle"
        android:id="@+id/cbFashionStyle"
        android:layout_below="@+id/cbArt"
        android:layout_alignLeft="@+id/cbArt"
        android:layout_alignStart="@+id/cbArt"
        android:checked="false"
        android:layout_gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbSports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashionStyle"
        android:layout_alignLeft="@+id/cbFashionStyle"
        android:layout_alignStart="@+id/cbFashionStyle"
        android:checked="false"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvBeginDate"
        android:layout_below="@+id/cbSports"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tvBeginDate"
        android:layout_toLeftOf="@+id/cbSports"
        android:layout_toStartOf="@+id/cbSports"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etBeginDate"
        android:layout_below="@+id/cbSports"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/etBeginDate"
        android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:text="@string/tvEndDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvBeginDate"
            android:layout_toLeftOf="@+id/etBeginDate"
            android:layout_toStartOf="@+id/etBeginDate"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etEndDate"
            android:text=""
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvBeginDate"
            android:layout_toEndOf="@+id/tvBeginDate"
            android:layout_gravity="center" />

    </RelativeLayout>

</RelativeLayout>
