<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sort Order"
        android:id="@+id/tvSortOrder"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:id="@+id/spSortOrder"
        android:spinnerMode="dropdown"
        android:entries="@array/sortorder_array"
        android:prompt="@string/sortorder_prompt"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvSortOrder" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvBeginDate"
        android:id="@+id/tvBeginDate"
        android:layout_below="@+id/spSortOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>